Addressed Copilot comments
